<resources>


    <string name="s_Firebase_loguin_opciones">Loguin</string>
    <string name="s_Firebase_loguin_google">Google</string>
    <string name="s_Firebase_loguin_user">User</string>
    <string name="s_Google_Autenticacion_fallo">Authentication failed.Google service"</string>
    <string name="s_Google_verificar">Check</string>
    <string name="s_requerimiento">request</string>
    <string name="s_gestonar">Manage</string>
    <string name="s_Firebase_registro">Successful Registration</string>
    <string name="s_Firebase_user_no_valido">Invalid user</string>
    <string name="s_Firebase_user_eliminar">Delete user</string>
    <string name="s_Firebase_user_eliminar_continua">confirm</string>


    <!-- 000WebHost -->
    <string name="s_ip_000webhost">https://restauranteudea.000webhostapp.com</string>


    <!-- Strings Web services -->
    <!-- Activity FOOD -->
    <string name="s_web_insert_full">Insert full</string>
    <string name="s_web_loading">Loading...</string>
    <string name="s_web_not_register">Could not register</string>
    <string name="s_web_not_query">The query could not be</string>
    <string name="s_web_not_photo">Error when loading the image</string>
    <string name="s_web_not_conexion">No internet connection</string>
    <string name="s_web_syncronizar">Update food-drinks</string>


    <string name="app_name">RestMobile</string>
    <string name="s_app_name">RestMobile</string>
    <string name="s_my_title1">RESTAURANT</string>
    <string name="s_my_title2">RESTAURANT > SERVICES</string>
    <string name="s_my_title3">RESTAURANT SERVICE</string>
    <string name="s_my_title4">BAR SERVICE</string>
    <string name="s_name">Name</string>
    <string name="s_price">Price</string>
    <string name="s_ingredients">Ingredients</string>
    <string name="s_register">Register</string>
    <string name="s_type">Type</string>
    <string name="s_schedule">Schedule</string>
    <string name="s_time">Time</string>
    <string name="s_mainCourse">Main Course</string>
    <string name="s_entry">Entry</string>
    <string name="s_morning">Morning</string>
    <string name="s_evening">Evening</string>
    <string name="s_afternoon">Afternoon</string>
    <string name="s_welcome">Welcome</string>


    <!-- Strings Fragment List Drink-->
    <string name="s_price_list_drink">Price</string>
    <string name="s_name_list_drink">Name</string>
    <string name="s_list_drink_menu">List Drink</string>

    <!-- Strings Fragment List Food-->
    <string name="s_list_food_menu">List Food</string>
    <string name="s_name_list_food">Name</string>
    <string name="s_type_list_food">Type</string>
    <string name="s_price_list_food">Price</string>
    <string name="s_time_list_food">Time preparations</string>

    <!-- Strings Menu busqueda -->
    <string name="s_menu_search">Search</string>

    <!-- Strings Fragment Acerca de-->
    <string name="s_title_about">Title</string>
    <string name="s_information_about">Information</string>


    <!-- Strings Fragment Configuration-->
    <string name="s_name_loguin">Name</string>
    <string name="s_pass_loguin">Pass</string>
    <string name="s_entrar_loguin">Enter</string>
    <string name="s_edit_profile">Edit Profile</string>
    <string name="s_authorization_notification">Authorization Notification</string>
    <string name="s_sound_notification">Sound Notification</string>
    <string name="s_keep_session">Keep Session</string>
    <string name="s_notification">Notification</string>

    <!-- Strings Activity Usuario-->
    <string name="s_name_user">Name</string>
    <string name="s_email_user">Email</string>
    <string name="s_register_user">Register</string>
    <string name="s_create_Account">Create Account</string>
    <string name="s_user_update">Register update </string>

    <!-- Strings Fragment Services-->
    <string name="s_plate">Plate</string>
    <string name="s_food">Food</string>
    <string name="s_drink">Drink</string>


    <!-- Strings Fragment Detalle comida-->

    <string name="s_cancel">Cancel</string>
    <string name="s_favourite">Favourite</string>

    <!-- Strings Servicios_Activity_Navigation_Drawer -->
    <string name="s_close_navigation">Close</string>

    <!-- Strings Fragment Comida -->
    <string name="s_name_food_frame">Name</string>
    <string name="s_schedule_food_frame">Schedule</string>
    <string name="s_morning_food_frame">Morning</string>
    <string name="s_afternoon_food_frame">Afternoon</string>
    <string name="s_evening_food_frame">Evening</string>
    <string name="s_type_food_frame">Type</string>
    <string name="s_main_course_food_frame">Main course</string>
    <string name="s_entry_food_frame">Entry</string>
    <string name="s_time_preparation_food_frame">Time preparation</string>
    <string name="s_time_p">Time p.</string>
    <string name="s_time_selecction_food_frame">Time selecction</string>
    <string name="s_price_food_frame">Price</string>
    <string name="s_ingredents">Ingredents</string>
    <string name="s_register_food_frame">Register</string>
    <string name="s_information_food_frame">Information</string>


    <!-- Strings Servicios_Activity_Navigation_Drawer_drawer -->
    <string name="s_plates_list">Plates list</string>
    <string name="s_drink_list">Drinks list</string>
    <string name="s_profile">Profile</string>
    <string name="s_configuration">Configuration</string>
    <string name="s_sing_off">Sing off</string>
    <string name="s_about">About</string>
    <string name="s_drink_plate">Drink y Plantes</string>
    <string name="s_institution">udea.edu.co</string>
    <string name="s_services">Services</string>

    <string name="title_activity_servicios_navigation_drawer">ServiciosActivityNavigationDrawer
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="s_close_drawer">"Close "</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_loguin">LoguinActivity</string>
    <string name="title_activity_loguin_tabbed">LoguinTabbed</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
</resources>
