<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/ic_restaurant_red_24dp"
            android:title="@string/s_plates_list" />
        <item
            android:id="@+id/nav_drink"
            android:icon="@drawable/ic_local_bar_red_24dp"
            android:title="@string/s_drink_list" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_red_24dp"
            android:title="@string/s_profile" />
        <item
            android:id="@+id/nav_syncronizar"
            android:icon="@drawable/ic_cached_black_24dp"
            android:title="@string/s_web_syncronizar"/>
        <item
            android:id="@+id/nav_configuration"
            android:icon="@drawable/ic_build_red_24dp"
            android:title="@string/s_configuration" />
    </group>

    <item android:title="Options">
        <menu>
            <item
                android:id="@+id/nav_Sing_off"
                android:icon="@drawable/ic_vpn_key_red_24dp"
                android:title="@string/s_sing_off" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_report_red_24dp"
                android:title="@string/s_about" />
        </menu>
    </item>

</menu>
