<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.LoguinFirebaseFragment">


    <ImageView
        android:id="@+id/imgPhotoProfileF"
        android:layout_width="132dp"
        android:layout_height="101dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@drawable/login"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/ediName_loguinF"
                android:layout_width="365dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:hint="@string/s_email_user"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/ediPass_loguinF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:hint="@string/s_pass_loguin"
                android:inputType="textPassword" />
        </TableRow>


        <Button
            android:id="@+id/butLoguinF"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="false"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@color/colorPrimary1"
            android:onClick="onClick"
            android:text="@string/s_entrar_loguin"
            android:textColor="@android:color/background_light"
            tools:ignore="OnClick" />

    </TableLayout>




</LinearLayout>