<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrinkActivity">

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@android:color/holo_red_dark"
        android:gravity="right">

        <TextView
            android:id="@+id/texManage"
            android:layout_width="197dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center"
            android:text="@string/s_gestonar"
            android:textAlignment="textStart"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            tools:ignore="RtlCompat" />

        <ImageView
            android:id="@+id/imaNewD"
            android:layout_width="49dp"
            android:layout_height="43dp"
            android:onClick="onClick"
            android:src="@drawable/ic_add" />

        <ImageView
            android:id="@+id/imaSaveD"
            android:layout_width="57dp"
            android:layout_height="42dp"
            android:onClick="onClick"
            android:src="@drawable/ic_save" />

        <ImageView
            android:id="@+id/imaDeleteD"
            android:layout_width="58dp"
            android:layout_height="42dp"
            android:onClick="onClick"
            android:src="@drawable/ic_delete" />

    </TableRow>

    <TextView
        android:id="@+id/texIdDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tableRow"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="101dp">

        <ImageView
            android:id="@+id/imgDrik_register"
            android:layout_width="141dp"
            android:layout_height="80dp"
            android:onClick="onClick"
            android:src="@drawable/drink2" />

        <TextView
            android:id="@+id/texIdD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <EditText
            android:id="@+id/ediName_Drink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/s_name_food_frame"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/ediPreci_Drink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/s_price_food_frame"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/ediIngredents_Drink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/s_ingredents"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="350dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="358dp"
                    android:layout_height="84dp"
                    android:gravity="center"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="8dp">

                    <TextView
                        android:id="@+id/textView26x"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/s_information_food_frame" />

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/lv_datosDrink"
        android:layout_width="363dp"
        android:layout_height="150dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="11dp" />

</android.support.constraint.ConstraintLayout>